# Multi-Agent

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.opencode/plugins/: ponytail.mjs
LOGER/data_retriever/: api_github_fb43dfa9.json  data_retriever_log.txt  db_simulated_0a239e0a.txt  web_stackoverflow_cc8d5a79.html
LOGER/web_browsing/: extract_stackoverflow_63dd2b9e.html  visit_amazon_e6b300c0.html  web_browsing_log.txt
agents/example_agent/: graph.py  prompts.py  state.py
app/services/: agent_manager.py
config/: settings.example.toml
core/: orchestrator.py  schema.py  utils.py
core/agent_management/: base_agent.py  langgraph_agents.py  planning_agent.py  sarvagya_agent.py  tool_agent.py
core/prompts/: base_prompts.py
core/tool_management/: base_tool.py  code_executor_tool.py  (+4 more)
knowledge/: memory.py  vector_store.py
langgraph_agent_project/: main.py  requirements.txt
llm_services/: anthropic_llm.py  base_llm.py  openai_llm.py
test/: dynamic_playwright_web_browsing_demo.py  dynamic_requests_data_retriever_demo.py  static_response_test_data_retrieval.py  static_response_test_web_browser_tool.py
tests/: test_a2a.py  test_browser.py  test_code_executor_tool.py  test_codeact.py  test_core.py  test_durable.py  test_file_saver.py  test_hierarchical.py  test_mcp.py  test_memory.py  test_observability.py  test_orchestrator_workers.py  test_permissions.py  test_plan_execute.py  test_python.py  test_react.py  test_swarm.py
tools/: base_tool.py  tool_registry.py
(+76 files in other folders)
