[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent"
version = "0.1.0"
description = "Multi-agent orchestration framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.40"]
browser = ["playwright>=1.40"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.envs.default]
dependencies = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
